직접풀어보기 5-5 그리드레이아웃 사용하기 레이아웃까지 만들었음

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.ETC_Layout"
         tools:targetApi="31">
         <activity
+            android:name=".GridDir05_5"
+            android:exported="false" />
+        <activity
+            android:name=".GridLayout1"
+            android:exported="false" />
+        <activity
+            android:name=".TableLayout1"
+            android:exported="false" />
+        <activity
+            android:name=".Relative4Activity"
+            android:exported="false" />
+        <activity
             android:name=".Relative3Activity"
             android:exported="false" />
         <activity
